service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-app
  namespace: prod
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: simple-node-app
