network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prod
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: simple-node-app
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-dev
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
